allow some tasks to store progress and be resumed
